--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
           <div class="my-auto" >
               <img src="img/logo-s.png" class="img-fluid mb-3" alt="">
-              <h1 class="mb-0">Johndon
-                <span class="text-primary">Bonsen</span>
+              <h1 class="mb-0">AMUL
+                <span class="text-primary">SINGH</span>
               </h1>
-              <div class="subheading mb-5">THE NEXT BIG IDEA IS WAITING FOR ITS NEXT BIG CHANGER WITH 
-                  <a href="#">THEMSBIT</a>
+              <div class="subheading mb-5">GAME DEVELOPER | AR/VR | GRAPHICS PROGRAMMER | ML FOR VIRTUAL TRY ON'S
+                  <a href="#">.</a>
               </div>
-              <p class="mb-5" style="max-width: 500px;" >I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+              <p class="mb-5" style="max-width: 500px;" >I am experienced in designing, developing, and self-publishing Unity games across multiple platforms, delivering high-level technical and creative direction from concept to release. As an indie game developer, I have built and iterated on numerous prototypes, rapidly validating gameplay ideas while working across mobile, PC, AR, and VR. Iterative development practices and hands-on ownership enable scalable systems, optimized performance, and engaging player-centric experiences that maximize overall product value.</p>
               <ul class="list-inline list-social-icons mb-0">
                   <li class="list-inline-item">
                       <a href="#">
@@ -127,44 +127,46 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="resume-item col-md-6 col-sm-12 " > 
                 <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class=" resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Senior Web Developer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Game Developer - 2</h4>
+                      <p>Spearheaded the development of diverse interactive experiences, from VR retail to real-time multiplayer games, handling both
+client and server-side logic.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">March 2019 - Present</span>
+                      <span class="text-primary">August 2022 - Present - FYND</span>
                   </div>
                 </div>  
               </div>
               <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Web Developer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Lead Engineer</h4>
+                      <p>Led a team of 12 developers in the K-123 App division, overseeing major feature releases and technical strategy. Handling Localization Rollout in 9 Countries.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">December 2018 - March 2019</span>
+                      <span class="text-primary">August 2021 - August 2022 - BYJU'S</span>
                   </div>
                 </div>  
               </div>
               <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Junior Web Designer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Senior Game Developer</h4>
+                      <p>Developed and maintained educational mini-games for the flagship Squareland and SquareTales platforms, mentoring a team of
+3-4 junior developers.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">July 2017 - December 2018</span>
+                      <span class="text-primary">October 2018 - August 2021 - SQUAREPANDA</span>
                   </div>
                 </div>  
               </div>
               <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> Web Design Intern</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> AR/VR Developer</h4>
+                      <p>Served as the sole developer on an AR and VR product for Nissan, Honda delivering a comprehensive vehicle sales tool.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">September 2018 - June 2019</span>
+                      <span class="text-primary">Feb 2016 - October 2018 - IZMO</span>
                   </div>
                 </div>  
               </div>
@@ -183,9 +185,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="col-md-12">
                 <div class="port-head-cont">
                   <button class="btn btn-general btn-green filter-b" data-filter="all">All</button>
-                  <button class="btn btn-general btn-green filter-b" data-filter="consulting">Web Design</button>
-                  <button class="btn btn-general btn-green filter-b" data-filter="finance">Mobile Apps</button>
-                  <button class="btn btn-general btn-green filter-b" data-filter="marketing">Graphics Design</button> 
+                  <button class="btn btn-general btn-green filter-b" data-filter="consulting">AR/VR</button>
+                  <button class="btn btn-general btn-green filter-b" data-filter="finance">Mobile Games</button>
                 </div>
               </div>
           </div>
@@ -293,29 +294,36 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="col-md-3 col-sm-6">
                   <div class="skill-item">
                       <i class="fa fa-html5 fa-5x"></i>
-                      <h2><span class="counter"> 84 </span><span>%</span></h2>
-                      <p>HTML5</p>
+                      <h2><span class="counter"> 95 </span><span>%</span></h2>
+                      <p>UNITY</p>
                   </div>
               </div>
               <div class="col-md-3 col-sm-6">
                   <div class="skill-item">
                       <i class="fa fa-css3 fa-5x"></i>
                       <h2><span class="counter"> 95 </span><span>%</span></h2>
-                      <p>CSS3</p>
+                      <p>C#</p>
                   </div>
               </div>
               <div class="col-md-3 col-sm-6">
                   <div class="skill-item">
                       <i class="fa fa-code fa-5x"></i>
-                      <h2><span class="counter"> 65 </span><span>%</span></h2>
-                      <p>JQuery</p>
+                      <h2><span class="counter"> 80 </span><span>%</span></h2>
+                      <p>HLSL</p>
                   </div>
               </div>
               <div class="col-md-3 col-sm-6">
                   <div class="skill-item">
                       <i class="fa fa-globe fa-5x"></i>
-                      <h2><span class="counter"> 89 </span><span>%</span></h2>
-                      <p>PHP</p>
+                      <h2><span class="counter"> 70 </span><span>%</span></h2>
+                      <p>Three js</p>
+                  </div>
+              </div>
+              <div class="col-md-3 col-sm-6">
+                  <div class="skill-item">
+                      <i class="fa fa-globe fa-5x"></i>
+                      <h2><span class="counter"> 90 </span><span>%</span></h2>
+                      <p>ECS</p>
                   </div>
               </div>
           </div>
@@ -336,19 +344,29 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                       <div class="award-icon"></div>
                       <div class="award-content">
                           <span class="date">Apr 2017 - Mar 2018</span>
-                          <h5 class="title">Google Analytics Certified Developer</h5>
+                          <h5 class="title">HONDA TOP PERFORMER</h5>
                           <p class="description">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
+                              For Delivery a Flawless AR/VR Experience.
                           </p>
                       </div>
                   </div>
                   <div class="award">
                       <div class="award-icon"></div>
                       <div class="award-content">
-                          <span class="date">Apr 2018 - Mar 2019</span>
-                          <h5 class="title">Mobile Web Specialist - Google Certification</h5>
+                          <span class="date">Auguest 2021 - August 2022</span>
+                          <h5 class="title">BYJUS ROCKSTAR AWARDS</h5>
                           <p class="description">
-                              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
+                              For Solo Development of the Localization Tools and Pipleline while handling a Team.
+                          </p>
+                      </div>
+                  </div>
+                   <div class="award">
+                      <div class="award-icon"></div>
+                      <div class="award-content">
+                          <span class="date">Auguest 2022 - August 2023</span>
+                          <h5 class="title">FYND STARS</h5>
+                          <p class="description">
+                              For Creating Tools Automation Pipeline for All Real Money Card Games Rummy, Teen Patti and Callbreak.
                           </p>
                       </div>
                   </div>
@@ -385,18 +403,17 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="contact-cont2"> 
                 <div class="contact-add contact-box-desc">
                   <h3><i class="fa fa-map-marker cl-atlantis fa-2x"></i> Address</h3>
-                  <p>25, Dist town Street, Logn <br>
-                  California, US <br></p>
+                  <p>Mumbai <br></p>
                 </div>
                 <div class="contact-phone contact-side-desc contact-box-desc">
                   <h3><i class="fa fa-phone cl-atlantis fa-2x"></i> Phone</h3>
-                  <p>800 123 3456 <br>900 123 3457</p>
+                  <p>7977359046 <br>7669822206</p>
                 </div>
                 <div class="contact-mail contact-side-desc contact-box-desc">
                   <h3><i class="fa fa-envelope-o cl-atlantis fa-2x"></i> Email</h3>
                 <address class="address-details-f"> 
-                  Fax: 800 123 3456 <br>
-                  Email: <a href="mailto:info@themsbit.com" class="">info@themsbit.com</a>
+                   <br>
+                  Email: <a href="mailto:info@themsbit.com" class="">amulsinghdev@gmail.com</a>
                 </address>
                 <ul class="list-inline social-icon-f top-data">
                   <li><a href="#" target="_empty"><i class="fa top-social fa-facebook" style="color: #4267b2; border-color:#4267b2;"></i></a></li>
@@ -412,7 +429,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <section class=" d-flex flex-column" id="maps">
         <div id="map">
           <div class="map-responsive">
-             <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6030.418742494061!2d-111.34563870463673!3d26.01036670629853!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1471908546569" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+             <iframe src="https://www.google.com/maps?q=19.0760,72.8777&output=embed" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
       </section>
