Added Project Details

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="shortcut icon" href="img/favicon.ico">
-    <title>Profile Bootstrap Theme</title>
+    <link rel="shortcut icon" href="">
+    <title></title>
 
     <!-- Global stylesheets -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <h1 class="mb-0">AMUL
                 <span class="text-primary">SINGH</span>
               </h1>
-              <div class="subheading mb-5">GAME DEVELOPER | AR/VR | GRAPHICS PROGRAMMER | ML FOR VIRTUAL TRY ON'S
+              <div class="subheading mb-5">GAME DEVELOPER | AR/VR Specialist | GRAPHICS PROGRAMMER 
                   <a href="#">.</a>
               </div>
               <p class="mb-5" style="max-width: 500px;" >I am experienced in designing, developing, and self-publishing Unity games across multiple platforms, delivering high-level technical and creative direction from concept to release. As an indie game developer, I have built and iterated on numerous prototypes, rapidly validating gameplay ideas while working across mobile, PC, AR, and VR. Iterative development practices and hands-on ownership enable scalable systems, optimized performance, and engaging player-centric experiences that maximize overall product value.</p>
@@ -462,21 +462,21 @@ client and server-side logic.</p>
                                   <img class="img-fluid img-centered" src="img/portfolio/p-1.jpg" alt="">
                                 </div>
                                 <div class="col-md-6">
-                                  <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                  <p>Created Real Money Card Games Portfolio Rummy, Callbrek and teen patti.</p>
                                   <ul class="list-inline item-details">
                                       <li>Client:
                                           <strong>
-                                            <a href="#">Techs Soft</a>
+                                            <a href="#">Fynd</a>
                                           </strong>
                                       </li>
                                       <li>Date:
                                           <strong>
-                                            <a href="#">April 2018</a>
+                                            <a href="#">April 2023</a>
                                           </strong>
                                       </li>
                                       <li>Service:
                                           <strong>
-                                            <a href="#">Web Development</a>
+                                            <a href="#">Frontend/Backend</a>
                                           </strong>
                                       </li>
                                   </ul>
@@ -504,7 +504,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Squareland</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -513,7 +513,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-2.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>Create 9 Mini Games for Kids to teach them phonics, Spelling and Tracing letters</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
@@ -555,7 +555,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Time Travelling Car</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -564,7 +564,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-3.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>A game in which you travel through time with your car, fight bosses and overcome the Time travelling mafia.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
@@ -606,7 +606,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Byjus</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -615,7 +615,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-4.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>Did the Localization of the product in 7 countries, and help maintain and create 8 new Disney games for the Product.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
@@ -657,7 +657,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Honda</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -666,7 +666,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-5.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>Worked on Creating Honda's AR/VR sales solution and creating a Web Walkthrough using Three.js</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
@@ -708,7 +708,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Car Racing Xtreme</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -717,7 +717,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-6.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>Created an Indian Car Racing game with Ooty, Rajastan, Delhi Maps.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
@@ -759,7 +759,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Honda Web Sales Solution</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -768,7 +768,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-7.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>Worked on the Rendering Part of the Honda Web Sales Solution and Walkthrough.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
@@ -810,7 +810,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Glam AR</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -819,7 +819,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-8.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>Created a TryOn Solution for Android, IOS and Web for Glasses, Jewellery, Watches, Hat and Nail Paints.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
@@ -861,7 +861,7 @@ client and server-side logic.</p>
                         <div class="modal-body">
                             <div class="title-bar">
                               <div class="col-md-12">
-                                <h2 class="text-center">Our Project</h2>
+                                <h2 class="text-center">Kids App</h2>
                                 <div class="heading-border"></div>
                               </div>
                             </div>
@@ -870,7 +870,7 @@ client and server-side logic.</p>
                                 <img class="img-fluid img-centered" src="img/portfolio/p-9.jpg" alt="">
                               </div>
                               <div class="col-md-6">
-                                <p>Our new Project every processes had become fragmented; meaning quality and service were inconsistent. This lack of standardization was adversely impacting operating costs, productivity and customer satisfaction. For several years now Payfast has worked strategically with innovations as a means of developing new solutions, products and services. In line with this vision, Success was approached to find new payments solutions to offer Payfast customers on their website, including open invoice and partial payments options.</p>
+                                <p>Created Mini games for kids and Streaming solution.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
