--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ client and server-side logic.</p>
                           <div class="modal-body">
                               <div class="title-bar">
                                 <div class="col-md-12">
-                                  <h2 class="text-center">Our Project</h2>
+                                  <h2 class="text-center">Frolic Live</h2>
                                   <div class="heading-border"></div>
                                 </div>
                               </div>
