Added Project Dates and Services

--- a/index.html
+++ b/index.html
@@ -184,9 +184,7 @@ client and server-side logic.</p>
               </div>
               <div class="col-md-12">
                 <div class="port-head-cont">
-                  <button class="btn btn-general btn-green filter-b" data-filter="all">All</button>
-                  <button class="btn btn-general btn-green filter-b" data-filter="consulting">AR/VR</button>
-                  <button class="btn btn-general btn-green filter-b" data-filter="finance">Mobile Games</button>
+                 
                 </div>
               </div>
           </div>
@@ -517,17 +515,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">Square Panda</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">October 2019</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Unity</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -568,17 +566,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">Indie Game</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">August 2024</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Unity</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -619,17 +617,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">Byjus</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">2021</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Engineering</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -670,17 +668,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">Izmo</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">2020</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Unity</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -721,17 +719,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">Indie Game</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">2023</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Game Development</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -772,17 +770,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">Izmo</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">2020</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Three JS</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -823,17 +821,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">Fynd</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">2023</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Unity | Three.js</a>
                                         </strong>
                                     </li>
                                 </ul>
@@ -874,17 +872,17 @@ client and server-side logic.</p>
                                 <ul class="list-inline item-details">
                                     <li>Client:
                                         <strong>
-                                          <a href="#">Techs Soft</a>
+                                          <a href="#">USP Studios</a>
                                         </strong>
                                     </li>
                                     <li>Date:
                                         <strong>
-                                          <a href="#">April 2018</a>
+                                          <a href="#">2015</a>
                                         </strong>
                                     </li>
                                     <li>Service:
                                         <strong>
-                                          <a href="#">Web Development</a>
+                                          <a href="#">Unity</a>
                                         </strong>
                                     </li>
                                 </ul>
